# pdf_masking

./: .gitignore  .markdownlintrc.json  CLAUDE.md  Cargo.toml  README.ja.md  README.md  build.rs  flake.nix
csrc/: jbig2enc_shim.cpp
docs/: processing-flow.md
docs/plans/: 2025_0208_0001-implementation_plan.md  2025_0208_0119-project_requirements.md  2025_0208_0120-implementation_plan.md  2025_0208_1327-refactoring-phases14-18-implementation.md  2025_0208_1341-unsafe-unwrap-audit.md  2025_0209_0004-per-page-color-mode.md  2025_0209_0158-text-selective-rasterize.md  2025_0211_1502-system-font-resolution.md  2025_0211_1625-auto-fallback-chain.md  2025_0211_1700-text-region-jbig2-encoding.md  2026_0211_1044-logging-framework.md  2026_0212_0253-tracing-log-enhancement.md  2026_0212_0358-mrc-feature-flag-plan.md  code-review-findings.md  streamed-stirring-steele.md  synchronous-discovering-volcano.md
sample/: jobs.yaml  test_bw.yaml
scripts/: jbig2enc-CMakeLists.txt  setup-windows.ps1
src/: error.rs  lib.rs  linearize.rs  main.rs
src/cache/: hash.rs  mod.rs  store.rs
src/config/: job.rs  merged.rs  mod.rs  settings.rs
src/ffi/: jbig2enc.rs  jbig2enc_sys.rs  leptonica.rs  leptonica_sys.rs  mod.rs
src/mrc/: compositor.rs  jbig2.rs  jpeg.rs  mod.rs  segmenter.rs
src/pdf/: content_stream.rs  font.rs  glyph_to_path.rs  image_xobject.rs  mod.rs  optimizer.rs  reader.rs  text_state.rs  text_to_outlines.rs  writer.rs
src/pipeline/: job_runner.rs  mod.rs  orchestrator.rs  page_processor.rs
src/render/: mod.rs  pdfium.rs
tests/: cache_test.rs  cli_test.rs  color_mode_config_test.rs  config_test.rs  content_stream_test.rs  e2e_test.rs  ffi_jbig2enc_test.rs  ffi_leptonica_test.rs  font_parser_test.rs  glyph_to_path_test.rs  linearize_test.rs  mrc_pipeline_test.rs  optimizer_test.rs  pdf_reader_test.rs  pdf_writer_test.rs  pipeline_test.rs  project_setup_test.rs  render_test.rs  text_state_test.rs  text_to_outlines_test.rs
