[package]
name = "pdf_masking"
version = "0.1.0"
edition = "2021"

[dependencies]
# Error handling
thiserror = "2.0.18"

# Configuration parsing
serde = { version = "1.0", features = ["derive"] }
serde_yml = "0.0.12"

# PDF processing (Phase 2+)
# lopdf = "0.32"
# pdfium-render = { version = "0.8", features = ["static"] }

# Image processing (Phase 5+)
# image = "0.24"

# Leptonica (Phase 3+, via system library)
# leptonica-sys = "0.3"

# JBIG2 encoding (Phase 4+, will use custom C bindings)

# Parallel processing
rayon = "1.7"

# Hashing
sha2 = "0.10"
hex = "0.4"

# Testing utilities
[dev-dependencies]
tempfile = "3.8"
