[package]
name = "pdf_masking"
version = "0.1.0"
edition = "2021"

[dependencies]
# Error handling
thiserror = "2.0.18"

# Configuration parsing
serde = { version = "1.0.228", features = ["derive"] }
serde_yml = "0.0.12"

# PDF processing (Phase 2+)
lopdf = "0.39.0"
# pdfium-render = { version = "0.8", features = ["static"] }

# Image processing (Phase 5+)
# image = "0.25.9"

# Leptonica (Phase 3+, via system library)
leptonica-sys = "0.4.9"

# JBIG2 encoding (Phase 4+, will use custom C bindings)

# Parallel processing
rayon = "1.11.0"

# Hashing
sha2 = "0.10.9"
hex = "0.4.3"

# Testing utilities
[dev-dependencies]
tempfile = "3.24.0"
