[package]
name = "pdf_masking"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"

[features]
default = ["mrc"]
mrc = ["dep:pdfium-render", "dep:leptonica-sys", "dep:libc", "dep:cc"]

[dependencies]
# Error handling
thiserror = "2.0.18"

# Configuration parsing
serde = { version = "1.0.228", features = ["derive"] }
serde_yml = "0.0.12"

# PDF processing (Phase 2+)
lopdf = "0.39.0"
pdfium-render = { version = "0.8.37", optional = true }

# Image processing (Phase 5+)
image = "0.25.9"

# Leptonica (Phase 3+, via system library)
leptonica-sys = { version = "0.4.9", optional = true }

# JBIG2 encoding (Phase 4+, via C++ shim)
libc = { version = "0.2.181", optional = true }

# Parallel processing
rayon = "1.11.0"

# Hashing
sha2 = "0.10.9"
hex = "0.4.3"

# JSON serialization (Phase 8+)
serde_json = "1.0.149"

# Font parsing (text-to-outlines)
ttf-parser = "0.25.1"

# System font resolution (text-to-outlines fallback)
fontdb = "0.23.0"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

# Compression (Phase 9+)
flate2 = "1.1.9"

[build-dependencies]
cc = { version = "1.2.55", optional = true }

# Testing utilities
[dev-dependencies]
tempfile = "3.25.0"
